<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_setting"
        android:title="@string/menu_action_setting"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit_patient_details"
        android:title="@string/menu_action_edit_patient_details"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit_doctor_details"
        android:title="@string/menu_action_edit_doctor_details"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_change_tracking_radius"
        android:title="@string/menu_action_change_tracking_radius"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:title="@string/menu_action_logout"
        app:showAsAction="never" />


</menu>